crates/wcl_lang/tests/snapshots/snapshots__format_connections.snap
---
source: crates/wcl_lang/tests/snapshots.rs
expression: printed
---
# Connections between blocks.
# 
# `connection` declares a relationship schema: a name, source/destination
# types, and the symbol_set its `kind` is drawn from. Statements of the
# form `lhs -> rhs [:kind]` are deconstructed into the parent's
# `@connections(SchemaName)` field as records with `source`,
# `destination`, and `kind` slots.

symbol_set EdgeKind {
  uses
  depends_on
}

connection DependsOn : Service -> Service : EdgeKind

@document
type Config {
  @children("service") services: list<Service>
  @connections(DependsOn) deps: list<DependsOn>
}

@block("service")
type Service {
  @inline(0) id: identifier
  port: u32
}

service "web" {
  port = 8080u32
}
service "db" {
  port = 5432u32
}
service "cache" {
  port = 6379u32
}

web -> db
web -> cache :uses
